fixed spacing on home

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,7 +2,7 @@
 {
     width: 100%;
     margin: auto;
-    margin-top: 12rem;
+    margin-top: 9rem;
 }
 
 .Home .content-divided
